parser/tests/bad/arr04-1.st
% lower bound of an 'array' cannot be negative

var arr1: array -1..2 of int
